src/components/About/About.css
.about {
  flex-direction: column;
  margin-top: 3em;
}

.about__center {
  text-align: center;
}

.typing {
  display: inline-block;
  overflow: hidden;
  border-right: 0.15em solid black;
  animation: typing 3.5s steps(40, end),
    blink-caret 0.75s steps(1, start) infinite;
  white-space: nowrap;
}

@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }
  50% {
    border-color: inherit;
  }
}

.about__name {
  color: var(--clr-primary);
}

.about__role {
  margin-top: 1.2em;
}

.about__desc {
  font-size: 1rem;
  max-width: 600px;
}

.about__desc,
.about__contact {
  margin-top: 2.4em;
}

.about .link--icon {
  margin-right: 0.8em;
}

.about .btn--outline {
  margin-right: 1em;
}

@media (max-width: 600px) {
  .app .about {
    align-items: flex-start;
    margin-top: 2em;
  }
}

